--- a/katz/index.html
+++ b/katz/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
+        <title>Max Katz Crowdfunding</title>
         <link rel="stylesheet" type="text/css" href="css/main.css">
         <script src="js/d3.min.js"></script>
         <script src="data/date-sum-bd-gender-result.js"></script>
