--- a/katz/index.html
+++ b/katz/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Статистика по сбору денег на избирательную кампанию Максима Каца 2014</title>
+        <meta charset="UTF-8">
         <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="css/main.css">
         <script src="js/d3.min.js"></script>
@@ -34,7 +35,7 @@
             <div id="allButton" class="active">Все</div>
             <div id="genderButton">М/Ж</div>
         </div>
-        
+
         <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -44,6 +45,9 @@
           ga('create', 'UA-54989348-1', 'auto');
           ga('send', 'pageview');
 
+        </script>
+        <script>
+            draw();
         </script>
     </body>
 </html>
