--- a/katz/index.html
+++ b/katz/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Статистика по сбору денег на избирательную кампанию Максима Каца 2014</title>
         <meta charset="UTF-8">
+        <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
         <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="css/main.css">
         <script src="js/d3.min.js"></script>
