--- a/katz/eng/index.html
+++ b/katz/eng/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>Maxim Katz Crowndfunding campaign 2014</title>
+        <title>Maxim Katz Crowndfunding Campaign 2014</title>
         <meta charset="UTF-8">
         <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
         <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
@@ -11,7 +11,7 @@
         <script src="js/main.js"></script>
     </head>
     <body>
-        <h1>Maxim Katz Crowndfunding campaign 2014</h1>
+        <h1>Maxim Katz Crowndfunding Campaign 2014</h1>
         <div id="svgContainer">
             <svg id="graph">
                 <defs>
