--- a/index.html
+++ b/index.html
@@ -1,1 +1,121 @@
-hola
+<!DOCTYPE HTML>
+<html>
+    <head>
+        <title>Petr Devaikin</title>
+        <meta charset="UTF-8">
+        <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
+        <link href='http://fonts.googleapis.com/css?family=Roboto+Slab&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" type="text/css" href="css/main.css">
+    </head>
+    <body>
+        <h1>Petr Devaikin</h1>
+
+        <div id="contacts">
+            <ul>
+                <li>
+                    <a href="mailto:p.devaikin@gmail.com">p.devaikin@gmail.com</a>
+                </li>
+                <li>
+                    <a href="https://github.com/petr-devaikin">GitHub</a>
+                </li>
+                <li>
+                    <a href="http://ru.linkedin.com/pub/petr-devaikin/81/827/45">LinkedIn</a>
+                </li>
+            </ul>
+        </div>
+        
+        <div id="projects">
+            <div class="project">
+                
+                <div class="screenshot">
+                </div>
+                <div class="title">
+                    <a href="http://hashtag-urbanmap.rhcloud.com">
+                        Hashtag Map
+                    </a>
+                </div>
+                <div class="description">
+                    The interactive map represents the city of&nbsp;Moscow and London by&nbsp;popular Instagram hashtags. The data is&nbsp;updated every hour.
+                </div>
+                <div class="technologies">
+                    Data&nbsp;visualization, Instagram, Python, Flask, HTML, HTML5, Canvas, JavaScript, CSS, MySql
+                </div>
+            </div>
+            <div class="project">
+                <div class="screenshot">
+                </div>
+                <div class="title">
+                    <a href="http://iseehue.herokuapp.com">
+                        I See Hue
+                    </a>
+                </div>
+                <div class="description">
+                    The diagram reveals how people perceive hues. After passing a&nbsp;simple test, you can compare your results with that of&nbsp;others.
+                </div>
+                <div class="technologies">
+                    Data&nbsp;visualization, Python, Flask, HTML, HTML5, SVG, JavaScript, RequireJS, CSS, SCSS, PostgreSQL
+                </div>
+            </div>
+            <div class="project">
+                <div class="screenshot">
+                </div>
+                <div class="title">
+                    <a href="http://petr-devaikin.github.io/duma/v1/">
+                        Russian Duma Flowchart
+                    </a>
+                </div>
+                <div class="description">
+                    The interactive flowchart illustrates the Russian Parliament structure from 1993. Users can observe the history of&nbsp;a&nbsp;concrete party or&nbsp;a&nbsp;deputy by&nbsp;clicking on&nbsp;the list on&nbsp;the bottom, the list on&nbsp;the right or&nbsp;the diagram components.
+                </div>
+                <div class="technologies">
+                    Data&nbsp;visualization, HTML, HTML5, SVG, JavaScript, CSS
+                </div>
+            </div>
+            <div class="project">
+                <div class="screenshot">
+                </div>
+                <div class="title">
+                    <a href="http://petr-devaikin.github.io/katz/eng/">
+                        Max Katz Crowdfunding Campaign
+                    </a>
+                </div>
+                <div class="description">
+                    The interactive diagram provides information on&nbsp;the age, gender and transaction amount of&nbsp;people participated in&nbsp;the crowdfunding campaign of&nbsp;Maxim Katz in&nbsp;2014.
+                </div>
+                <div class="technologies">
+                    Data&nbsp;visualization, HTML, HTML5, SVG, JavaScript, D3, CSS
+                </div>
+            </div>
+            <div class="project">
+                <div class="screenshot">
+                </div>
+                <div class="title">
+                    <a href="http://petr-devaikin.github.io/metro/">
+                        Moscow Metro Growth Map
+                    </a>
+                </div>
+                <div class="description">
+                    The map shows how Moscow metro was developed from 1937 to&nbsp;2014. To&nbsp;show the age of&nbsp;stations the heatmap color coding is&nbsp;used. Circles with different brightness around stations show the time to&nbsp;achieve a&nbsp;station by&nbsp;walking.
+                </div>
+                <div class="technologies">
+                    Data&nbsp;visualization, HTML, HTML5, SVG, JavaScript, D3, CSS
+                </div>
+            </div>
+            <div class="project">
+                <div class="screenshot">
+                </div>
+                <div class="title">
+                    <a href="http://поигратьсясошрифтиками.рф/">
+                        поигратьсясошрифтиками.рф
+                    </a>
+                </div>
+                <div class="description">
+                    The tool is&nbsp;developed for designers who are tired of&nbsp;customers&rsquo; requests to&nbsp;change the font.
+                </div>
+                <div class="technologies">
+                    Python, Flask, HTML, CSS
+                </div>
+            </div>
+        </div>
+    </body>
+</html>
