--- a/katz/timeline/index.html
+++ b/katz/timeline/index.html
@@ -24,14 +24,16 @@
                         <stop offset="100%" style="stop-color:#E3F7DF;stop-opacity:0" />
                     </linearGradient>
                 </defs>
-                <g id="container">
-                    <g id="backs">
-                    </g>
-                    <g id="axises">
-                        <g id="timeAxis"></g>
-                        <g id="days"></g>
-                    </g>
-                    <g id="data">
+                <g id="everything">
+                    <g id="container">
+                        <g id="backs">
+                        </g>
+                        <g id="axises">
+                            <g id="timeAxis"></g>
+                            <g id="days"></g>
+                        </g>
+                        <g id="data">
+                        </g>
                     </g>
                 </g>
             </svg>
