--- a/katz/timeline/index.html
+++ b/katz/timeline/index.html
@@ -34,6 +34,8 @@
                         </g>
                         <g id="data">
                         </g>
+                        <g id="foregs">
+                        </g>
                     </g>
                 </g>
             </svg>
