--- a/katz/eng/index.html
+++ b/katz/eng/index.html
@@ -5,9 +5,9 @@
         <meta charset="UTF-8">
         <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
         <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" type="text/css" href="css/main.css">
-        <script src="js/d3.min.js"></script>
-        <script src="data/date-sum-bd-gender-result.js"></script>
+        <link rel="stylesheet" type="text/css" href="../css/main.css">
+        <script src="../js/d3.min.js"></script>
+        <script src="../data/date-sum-bd-gender-result.js"></script>
         <script src="js/main.js"></script>
     </head>
     <body>
