--- a/index.html
+++ b/index.html
@@ -76,11 +76,26 @@
                 </div>
                 <div class="title">
                     <a href="http://petr-devaikin.github.io/katz/eng/">
-                        Max Katz Crowdfunding Campaign
+                        Max Katz Crowdfunding (age)
                     </a>
                 </div>
                 <div class="description">
-                    The interactive diagram provides information on&nbsp;the age, gender and transaction amount of&nbsp;people participated in&nbsp;the crowdfunding campaign of&nbsp;Maxim Katz in&nbsp;2014.
+                    The interactive diagram provides information on&nbsp;the age, gender and transaction amount of&nbsp;people participated in&nbsp;the Maxim Katz crowdfunding campaign in&nbsp;2014.
+                </div>
+                <div class="technologies">
+                    Data&nbsp;visualization, HTML, HTML5, SVG, JavaScript, D3, CSS
+                </div>
+            </div>
+            <div class="project">
+                <div class="screenshot">
+                </div>
+                <div class="title">
+                    <a href="http://petr-devaikin.github.io/katz/eng/timeline/">
+                        Max Katz Crowdfunding (timeline)
+                    </a>
+                </div>
+                <div class="description">
+                    The diagram illustrates the timeline of&nbsp;the Maxim Katz crowdfunding campaign in&nbsp;2014.
                 </div>
                 <div class="technologies">
                     Data&nbsp;visualization, HTML, HTML5, SVG, JavaScript, D3, CSS
