--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <div class="project">
                 
                 <div class="screenshot">
+                    <a href="http://hashtag-urbanmap.rhcloud.com"><img src="img/hashtagmap.jpg" alt="Hashtag Map" /></a>
                 </div>
                 <div class="title">
                     <a href="http://hashtag-urbanmap.rhcloud.com">
@@ -43,6 +44,7 @@
             </div>
             <div class="project">
                 <div class="screenshot">
+                    <a href="http://iseehue.herokuapp.com"><img src="img/iseehue.jpg" alt="I See Hue" /></a>
                 </div>
                 <div class="title">
                     <a href="http://iseehue.herokuapp.com">
@@ -58,6 +60,7 @@
             </div>
             <div class="project">
                 <div class="screenshot">
+                    <a href="http://petr-devaikin.github.io/duma/v1/"><img src="img/duma.jpg" alt="Russian Duma Flowchart" /></a>
                 </div>
                 <div class="title">
                     <a href="http://petr-devaikin.github.io/duma/v1/">
@@ -73,6 +76,7 @@
             </div>
             <div class="project">
                 <div class="screenshot">
+                    <a href="http://petr-devaikin.github.io/katz/eng/"><img src="img/katz1.jpg" alt="Max Katz Crowdfunding (age)" /></a>
                 </div>
                 <div class="title">
                     <a href="http://petr-devaikin.github.io/katz/eng/">
@@ -88,6 +92,7 @@
             </div>
             <div class="project">
                 <div class="screenshot">
+                    <a href="http://petr-devaikin.github.io/katz/eng/timeline/"><img src="img/katz2.jpg" alt="Max Katz Crowdfunding (timeline)" /></a>
                 </div>
                 <div class="title">
                     <a href="http://petr-devaikin.github.io/katz/eng/timeline/">
@@ -103,6 +108,7 @@
             </div>
             <div class="project">
                 <div class="screenshot">
+                    <a href="http://petr-devaikin.github.io/metro/"><img src="img/metro.jpg" alt="Moscow Metro Growth Map" /></a>
                 </div>
                 <div class="title">
                     <a href="http://petr-devaikin.github.io/metro/">
@@ -118,6 +124,7 @@
             </div>
             <div class="project">
                 <div class="screenshot">
+                    <a href="http://поигратьсясошрифтиками.рф"><img src="img/font.jpg" alt="поигратьсясошрифтиками.рф" /></a>
                 </div>
                 <div class="title">
                     <a href="http://поигратьсясошрифтиками.рф/">
