--- a/index.html
+++ b/index.html
@@ -26,7 +26,22 @@
 
         <div id="projects">
             <div class="project">
-                
+                <div class="screenshot">
+                    <a href="http://pazzla.qoollo.com"><img src="img/pazzla.jpg" alt="Pazzla" /></a>
+                </div>
+                <div class="title">
+                    <a href="http://pazzla.qoollo.com">
+                        Pazzla
+                    </a>
+                </div>
+                <div class="description">
+                    Service to make a photo mosaic of Instagram pictures.
+                </div>
+                <div class="technologies">
+                    Instagram, Python, Flask, HTML, HTML5, JavaScript, D3, CSS, SASS, SQLite
+                </div>
+            </div>
+            <div class="project">
                 <div class="screenshot">
                     <a href="http://hashtag-urbanmap.rhcloud.com"><img src="img/hashtagmap.jpg" alt="Hashtag Map" /></a>
                 </div>
@@ -36,7 +51,7 @@
                     </a>
                 </div>
                 <div class="description">
-                    The interactive map represents the city of&nbsp;Moscow and London by&nbsp;popular Instagram hashtags. The data is&nbsp;updated every hour.
+                    The interactive map represents the city of&nbsp;Moscow, Berlin, Saint&nbsp;Petersburg and London by&nbsp;popular Instagram hashtags. The data is&nbsp;updated every hour.
                 </div>
                 <div class="technologies">
                     Data&nbsp;visualization, Instagram, Python, Flask, HTML, HTML5, Canvas, JavaScript, CSS, MySql
