--- a/rts/index.html
+++ b/rts/index.html
@@ -19,9 +19,17 @@
             </label>
             <label>
                 <span>Длина шлейфа:</span>
-                <input type="number" id="iterationCount" value="200" />
+                <input type="number" id="iterationCount" value="1000" />
             </label>
-            <button>Обновить</button>
+            <label>
+                <span>Яркость пятен:</span>
+                <input type="number" id="spotBrightness" value="7" />
+            </label>
+            <div id="buttonGroup">
+                <button id="changeShape">сменить форму</button>
+                <button id="changeColor">сменить цвета</button>
+                <button id="changeAll">сменить всё нахуй</button>
+            </div>
         </div>
         
     </body>
