--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     Data&nbsp;visualization, HTML, HTML5, SVG, JavaScript, D3, CSS
                 </div>
             </div>
-            <div class="project">
+            <!--div class="project">
                 <div class="screenshot">
                     <a href="http://поигратьсясошрифтиками.рф"><img src="img/font.jpg" alt="поигратьсясошрифтиками.рф" /></a>
                 </div>
@@ -152,7 +152,7 @@
                 <div class="technologies">
                     Python, Flask, HTML, CSS
                 </div>
-            </div>
+            </div-->
         </div>
         <div id="copy">&copy; 2015</div>
 
