--- a/movement/index.html
+++ b/movement/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>Petr Devaikin</title>
+        <title>Æ-movement</title>
         <meta charset="UTF-8">
         <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
         <link href='http://fonts.googleapis.com/css?family=Roboto+Slab&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
@@ -13,7 +13,7 @@
     <body>
         <div class="page" id="page_1" bg="img/p4.png">
             <div class="page__inner">
-                <h1>A–movement</h1>
+                <h1>Æ–movement</h1>
                 <ul>
                     <li>Petr Devaikin</li>
                     <li>Iva Karabatić</li>
@@ -21,15 +21,18 @@
                 </ul>
             </div>
         </div>
-        <div class="page" id="page_2" bg="img/p1.png">
+        <div class="page" id="page_2" bg="img/p2.png">
             <div class="page__inner">
                 <p>
-                    Our idea was to design an interactive system which emphasizes uniqueness and temporality of the body movement.
+                    Æ–movement – an interactive system for real-time visualization of body performance.
+                </p>
+                <p>
+                    Our idea was to emphasizes uniqueness and temporality of movements.
                 </p>
             </div>
         </div>
 
-        <div class="page" id="page_3" bg="img/p2.png">
+        <div class="page" id="page_3" bg="img/p1.png">
             <div class="page__inner">
                 <h2>Working Principle</h2>
                 <ul>
@@ -43,7 +46,7 @@
                     </li>
                     <li>
                         <h3>Visualize</h3>
-                        <p>Data is mapped to visual representation</p>
+                        <p>We mapped different movements to different visual variables that allowed us to create unique visual representation of participants' movements</p>
                     </li>
                 </ul>
             </div>
@@ -51,28 +54,39 @@
 
         <div class="page" id="page_4">
             <div class="page__inner">
-                <iframe id="video" src="https://player.vimeo.com/video/154781896?title=0&byline=0&portrait=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                <div id="video">
+                    <iframe src="https://player.vimeo.com/video/154781896?title=0&byline=0&portrait=0" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                </div>
             </div>
         </div>
 
         <div class="page" id="page_5">
             <div class="page__inner">
-                <h2>Paris-Sud University Exhebition</h2>
+                <h2>Paris-Saclay University Exhebition</h2>
                 <h3>2 February 2016</h3>
-                <div>image</div>
             </div>
         </div>
 
         <div class="page" id="page_6" bg="img/p3.png">
             <div class="page__inner">
-                <h2>Thanks for Help</h2>
-                <ul>
-                    <li><a href="http://saralaoui.com/">Sarah Fdili Alaoui</a></li>
-                    <li>Thierry Catelan – <i>Faca Deseig</i></li>
-                    <li>Steve Romain – <i>Formado Dadao</i></li>
-                    <li>Sébastien Gelu – <i>Faca Depota</i></li>
-                </ul>
-                &copy; 2016
+                <div>
+                    <h2>Thanks for Help</h2>
+                    <ul>
+                        <li><a href="http://saralaoui.com/">Sarah Fdili Alaoui</a></li>
+                        <li>Thierry Catelan – <i>Faca Deseig</i></li>
+                        <li>Steve Romain – <i>Formado Dadao</i></li>
+                        <li>Sébastien Gelu – <i>Faca Depota</i></li>
+                    </ul>
+                </div>
+                <div>
+                    <h2>Created by</h2>
+                    <ul>
+                        <li><a href="http://petr-devaikin.github.io/">Petr Devaikin</a></li>
+                        <li>Iva Karabatić</li>
+                        <li>Kevin Perez</li>
+                    </ul>
+                </div>
+                <span>&copy; 2016</span>
             </div>
         </div>
 
