--- a/movement/index.html
+++ b/movement/index.html
@@ -91,5 +91,10 @@
         </div>
 
         <div id="background"></div>
+
+        <img src="img/p1.png" style="display:none" />
+        <img src="img/p2.png" style="display:none" />
+        <img src="img/p3.png" style="display:none" />
+        <img src="img/p4.png" style="display:none" />
     </body>
 </html>
