--- a/movement/index.html
+++ b/movement/index.html
@@ -38,15 +38,15 @@
                 <ul>
                     <li>
                         <h3>Capture the Movement</h3>
-                        <p>We attached a mobile phone to a participant's ankle or wrist and get the accelerometer and gyroscope data</p>
+                        <p>We attach a mobile phone to a participant's ankle or wrist and get the accelerometer and gyroscope data</p>
                     </li>
                     <li>
                         <h3>Analyse the Data</h3>
-                        <p>Data was transfered to a computer and filtered in real-time</p>
+                        <p>Data is transfered to a computer and filtered in real-time</p>
                     </li>
                     <li>
                         <h3>Visualize</h3>
-                        <p>We mapped different movements to different visual variables that allowed us to create unique visual representation of participants' movements</p>
+                        <p>We map different movements to different visual variables that allow us to create unique visual representation of participants' movements</p>
                     </li>
                 </ul>
             </div>
@@ -91,10 +91,5 @@
         </div>
 
         <div id="background"></div>
-
-        <img src="img/p1.png" style="display:none" />
-        <img src="img/p2.png" style="display:none" />
-        <img src="img/p3.png" style="display:none" />
-        <img src="img/p4.png" style="display:none" />
     </body>
 </html>
