--- a/movement/index.html
+++ b/movement/index.html
@@ -24,10 +24,10 @@
         <div class="page" id="page_2" bg="img/p2.png">
             <div class="page__inner">
                 <p>
-                    Æ–movement – an interactive system for real-time visualization of body performance.
+                    Æ–movement is an interactive system for real-time visualization of body performance.
                 </p>
                 <p>
-                    Our idea was to emphasizes uniqueness and temporality of movements.
+                    Our goal is to emphasize uniqueness and temporality of the movement by immersing users in full body aesthetic experience.
                 </p>
             </div>
         </div>
@@ -38,15 +38,15 @@
                 <ul>
                     <li>
                         <h3>Capture the Movement</h3>
-                        <p>We attach a mobile phone to a participant's ankle or wrist and get the accelerometer and gyroscope data</p>
+                        <p>Accelerometer and gyroscope data is collected by a mobile phone attached to a participant's ankle or wrist.</p>
                     </li>
                     <li>
                         <h3>Analyse the Data</h3>
-                        <p>Data is transfered to a computer and filtered in real-time</p>
+                        <p>Captured data is transfered from the mobile phone to a computer in the real-time and filtered to reduce noise.</p>
                     </li>
                     <li>
                         <h3>Visualize</h3>
-                        <p>We map different movements to different visual variables that allow us to create unique visual representation of participants' movements</p>
+                        <p>Mapping different movements to different visual variables we create a unique visual representation of participants' body expression.</p>
                     </li>
                 </ul>
             </div>
