--- a/movement/index.html
+++ b/movement/index.html
@@ -10,6 +10,10 @@
 
         <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
         <script src="main.js"></script>
+
+        <meta property="og:title"       content="Æ-movement" />
+        <meta property="og:description" content="Æ–movement is an interactive system for real-time visualization of body performance. Our goal is to emphasize uniqueness and temporality of the movement by immersing users in full body aesthetic experience." />
+        <meta property="og:image"       content="http://petr-devaikin.github.io/movement/img/p2.png" />
     </head>
     <body>
         <div class="page" id="page_1" bg="bg1">
@@ -43,7 +47,7 @@
                     </li>
                     <li>
                         <h3>Analyse the Data</h3>
-                        <p>Captured data is transfered from the mobile phone to a computer in the real-time and filtered to reduce noise.</p>
+                        <p>Captured data is transfered from the mobile phone to a computer in real-time and filtered to reduce noise.</p>
                     </li>
                     <li>
                         <h3>Visualize</h3>
