--- a/index.html
+++ b/index.html
@@ -27,6 +27,22 @@
         <div id="projects">
             <div class="project">
                 <div class="screenshot">
+                    <a href="movement/"><img src="img/movement.png" alt="Æ-movement" /></a>
+                </div>
+                <div class="title">
+                    <a href="movement/">
+                        Æ-movement
+                    </a>
+                </div>
+                <div class="description">
+                    Interactive system for real-time visualization of body performance. The goal is to emphasize uniqueness and temporality of the movement by immersing users in full body aesthetic experience.
+                </div>
+                <div class="technologies">
+                    Processing
+                </div>
+            </div>
+            <div class="project">
+                <div class="screenshot">
                     <a href="http://pazzla.qoollo.com"><img src="img/pazzla.jpg" alt="Pazzla" /></a>
                 </div>
                 <div class="title">
@@ -51,7 +67,7 @@
                     </a>
                 </div>
                 <div class="description">
-                    The interactive map represents the city of&nbsp;Moscow, Berlin, Saint&nbsp;Petersburg and London by&nbsp;popular Instagram hashtags. The data is&nbsp;updated every hour.
+                    Visual representation of the city life of&nbsp;Moscow, Berlin, Saint&nbsp;Petersburg and London by&nbsp;popular Instagram hashtags. The data is&nbsp;updated every hour.
                 </div>
                 <div class="technologies">
                     Data&nbsp;visualization, Instagram, Python, Flask, HTML, HTML5, Canvas, JavaScript, CSS, MySql
@@ -67,7 +83,7 @@
                     </a>
                 </div>
                 <div class="description">
-                    The diagram reveals how people perceive hues. After passing a&nbsp;simple test, you can compare your results with that of&nbsp;others.
+                    Color perception diagram. After passing a&nbsp;simple test, you can compare your results with that of&nbsp;others.
                 </div>
                 <div class="technologies">
                     Data&nbsp;visualization, Python, Flask, HTML, HTML5, SVG, JavaScript, RequireJS, CSS, SCSS, PostgreSQL
@@ -83,7 +99,7 @@
                     </a>
                 </div>
                 <div class="description">
-                    The interactive flowchart illustrates the Russian Parliament structure from 1993. Users can observe the history of&nbsp;a&nbsp;concrete party or&nbsp;a&nbsp;deputy by&nbsp;clicking on&nbsp;the list on&nbsp;the bottom, the list on&nbsp;the right or&nbsp;the diagram components.
+                    Interactive visualization of the Russian Parliament structure from 1993. Users can observe the history of&nbsp;a&nbsp;concrete party or&nbsp;a&nbsp;deputy by&nbsp;clicking on&nbsp;the list on&nbsp;the bottom, the list on&nbsp;the right or&nbsp;the diagram components.
                 </div>
                 <div class="technologies">
                     Data&nbsp;visualization, HTML, HTML5, SVG, JavaScript, CSS
@@ -99,7 +115,7 @@
                     </a>
                 </div>
                 <div class="description">
-                    The interactive diagram provides information on&nbsp;the age, gender and transaction amount of&nbsp;people participated in&nbsp;the Maxim Katz crowdfunding campaign in&nbsp;2014.
+                    Visualization of the Maxim Katz crowdfunding campaign in&nbsp;2014. The interactive diagram provides information on&nbsp;the age, gender and transaction amount of&nbsp;contributors.
                 </div>
                 <div class="technologies">
                     Data&nbsp;visualization, HTML, HTML5, SVG, JavaScript, D3, CSS
@@ -115,13 +131,13 @@
                     </a>
                 </div>
                 <div class="description">
-                    The diagram illustrates the timeline of&nbsp;the Maxim Katz crowdfunding campaign in&nbsp;2014.
+                    Timeline of the Maxim Katz crowdfunding campaign in&nbsp;2014.
                 </div>
                 <div class="technologies">
                     Data&nbsp;visualization, HTML, HTML5, SVG, JavaScript, D3, CSS
                 </div>
             </div>
-            <div class="project">
+            <!--div class="project">
                 <div class="screenshot">
                     <a href="http://petr-devaikin.github.io/metro/"><img src="img/metro.jpg" alt="Moscow Metro Growth Map" /></a>
                 </div>
@@ -136,7 +152,7 @@
                 <div class="technologies">
                     Data&nbsp;visualization, HTML, HTML5, SVG, JavaScript, D3, CSS
                 </div>
-            </div>
+            </div-->
             <!--div class="project">
                 <div class="screenshot">
                     <a href="http://поигратьсясошрифтиками.рф"><img src="img/font.jpg" alt="поигратьсясошрифтиками.рф" /></a>
@@ -156,7 +172,7 @@
         </div>
         <div id="copy">&copy; 2015</div>
 
-        
+
         <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
