--- a/movement/index.html
+++ b/movement/index.html
@@ -11,6 +11,7 @@
         <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
         <script src="main.js"></script>
 
+        <meta property="og:url"       content="http://petr-devaikin.github.io/movement/" />
         <meta property="og:title"       content="Æ-movement" />
         <meta property="og:description" content="Æ–movement is an interactive system for real-time visualization of body performance. Our goal is to emphasize uniqueness and temporality of the movement by immersing users in full body aesthetic experience." />
         <meta property="og:image"       content="http://petr-devaikin.github.io/movement/img/p2.png" />
